--- a/css/style.css
+++ b/css/style.css
@@ -101,13 +101,25 @@
 
 .main-content {
     width: 100%;
-    height: 100%;
     color: white;
     text-align: center;
     vertical-align: middle;
 }
 
 .main-content .content-item {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.map-content {
+
+    background-size: 50% 100%;
+    margin-bottom: 4%;
+}
+
+.map-content .content-item {
     position: relative;
     top: 50%;
     left: 50%;
