--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@
 }
 
 .main-content {
-    width: 100%;
+    width: 70%;
+    height: 100%;
     color: white;
     text-align: center;
     vertical-align: middle;
@@ -140,9 +141,8 @@
 
 .main-content .content-item {
     position: relative;
-    top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-29%);
 }
 
 .home-content {
@@ -261,8 +261,14 @@
 }
 
 .map-content {
-
     margin-bottom: 4%;
+}
+
+.map-content .title {
+    width: 100%;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .map-content .content-item {
