--- a/css/flat-web.css
+++ b/css/flat-web.css
@@ -101,6 +101,11 @@ body
     margin-top: 78px;
 }
 
+.push-m
+{
+    margin-top: 18px;
+}
+
 .push-sm
 {
     margin-top: 5px;
@@ -119,6 +124,11 @@ body
 .push-bottom-sm
 {
     margin-bottom: 5px;
+}
+
+.position-mid-v
+{
+    margin-left: 25%;
 }
 
 @media(max-width: 767px)
