--- a/css/coupon-table.css
+++ b/css/coupon-table.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: OpenSans-Regular;
-  src: url('../fonts/OpenSans/OpenSans-Regular.ttf'); 
+  src: url('../fonts/OpenSans/OpenSans-Regular.ttf');
 }
 
 
@@ -14,31 +14,7 @@
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 * {
-	margin: 0px; 
-	padding: 0px; 
-	box-sizing: border-box;
-}
-
-body, html {
-	height: 100%;
-	font-family: sans-serif;
-}
-
-/* ------------------------------------ */
-a {
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-a:focus {
-	outline: none !important;
-}
-
-a:hover {
-	text-decoration: none;
+  box-sizing: border-box;
 }
 
 /* ------------------------------------ */
@@ -47,16 +23,17 @@ h1,h2,h3,h4,h5,h6 {margin: 0px;}
 p {margin: 0px;}
 
 ul, li {
-	margin: 0px;
-	list-style-type: none;
+  margin: 0px;
+  list-style-type: none;
 }
 
 
 /* ------------------------------------ */
 input {
   display: block;
-	outline: none;
-	border: none !important;
+  outline: none;
+  border: none !important;
+  margin-top: 8px;
 }
 
 textarea {
@@ -70,17 +47,17 @@ textarea:focus, input:focus {
 
 /* ------------------------------------ */
 button {
-	outline: none !important;
-	border: none;
-	background: transparent;
+  outline: none !important;
+  border: none;
+  background: transparent;
 }
 
 button:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 iframe {
-	border: none !important;
+  border: none !important;
 }
 
 
@@ -97,13 +74,26 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Table ]*/
 
+.table-content {
+  width: 70%;
+  height: 100%;
+}
+
+.table-content .content-item {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .limiter {
   width: 100%;
-  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .container-table100 {
-  width: 100%;
+  width: 70%;
   min-height: 100vh;
   /*
   background: #c850c0;
@@ -121,10 +111,13 @@ iframe {
   justify-content: center;
   flex-wrap: wrap;
   padding: 33px 30px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .wrap-table100 {
-  width: 1000px;
+  width: 100%;
 }
 
 table {
@@ -195,32 +188,43 @@ tbody tr:hover {
 
 .column1 {
   text-align: center;
-  width: 180px;
+  width: 14.2%;
   padding-left: 40px;
 }
 
 .column2 {
   text-align: center;
-  width: 180px;
+  width: 14.2%;
 }
 
 .column3 {
   text-align: center;
-  width: 245px;
+  width: 14.2%;
 }
 
 .column4 {
   text-align: center;
-  width: 245px;
+  width: 14.2%;
   /*text-align: right;*/
 }
 
 .column5 {
   text-align: center;
-  width: 180px;
+  width: 14.2%;
   /*text-align: right;*/
 }
 
+.column6 {
+  text-align: center;
+  width: 14.2%;
+  /*text-align: right;*/
+}
+
+.column7 {
+  text-align: center;
+  width: 14.2%;
+  /*text-align: right;*/
+}
 
 @media screen and (max-width: 992px) {
   table {
@@ -255,35 +259,37 @@ tbody tr:hover {
     top: 0;
   }
   table tbody tr td:nth-child(1):before {
-    content: "Order ID";
+    content: "Coupon ID";
   }
   table tbody tr td:nth-child(2):before {
-    content: "Passport ID";
+    content: "Discount(%)";
   }
   table tbody tr td:nth-child(3):before {
-    content: "Name";
+    content: "Status";
   }
   table tbody tr td:nth-child(4):before {
-    content: "Food Name";
+    content: "Owner";
   }
   table tbody tr td:nth-child(5):before {
-    content: "Food Type";
+    content: "Ticket in use";
+  }
+  table tbody tr td:nth-child(6):before {
+    content: "Edit";
+  }
+  table tbody tr td:nth-child(7):before {
+    content: "Delete";
   }
 
-  .column4,
-  .column5,
-  .column6 {
-    text-align: left;
-  }
-
+  .column1,
+  .column2,
+  .column3,
   .column4,
   .column5,
   .column6,
-  .column1,
-  .column2,
-  .column3 {
+  .column7 {
     width: 100%;
   }
+
 
   tbody tr {
     font-size: 14px;
