--- a/css/Map.css
+++ b/css/Map.css
@@ -2,13 +2,31 @@
     width: 65vw;
     height: 85vw;
 }
+#Pic {
+    width: 20px;
+    padding-bottom: 10px;
+}
 
 #titletext {
-    font-family: "Script MT";
+    font-family: 'Lobster' ;
     color: #000099;
     font-size: 6vw;
     margin-top: 20px;
     text-decoration: underline;
+}
+
+#footertext {
+    font-family: 'Staatliches' ;
+    color: black;
+    font-size: 20px;
+    margin-top: 20px;
+
+}
+#txt {
+    font-family: 'Staatliches' ;
+    color: black;
+    font-size: 30px;
+    margin-top: 20px;
 }
 
 .img-container {
