--- a/css/flat-web.css
+++ b/css/flat-web.css
@@ -91,6 +91,22 @@ body
     text-align: center;
 }
 
+.promotion-item
+{
+    height: 300px;
+    padding: 2px;
+}
+
+.promotion-item .promotion-item-box
+{
+    background: rgba(255, 255, 255, 0.6);
+    color: rgb(94, 94, 94);
+    padding: 40px;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
 .push
 {
     margin-top: 40px;
