--- a/css/flat-web.css
+++ b/css/flat-web.css
@@ -93,7 +93,7 @@ body
 
 .promotion-item
 {
-    height: 300px;
+    height: 400px;
     padding: 2px;
 }
 
@@ -104,6 +104,11 @@ body
     padding: 40px;
     height: 100%;
     width: 100%;
+    text-align: center;
+}
+
+.promotion-item .promotion-item-box td
+{
     text-align: center;
 }
 
