--- a/css/Flip-that-field!.css
+++ b/css/Flip-that-field!.css
@@ -7,12 +7,13 @@
 .memory-game {
     width: 640px;
     height: 640px;
-    margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 30%;
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .memory-card {
