--- a/css/Flip-that-field!.css
+++ b/css/Flip-that-field!.css
@@ -36,18 +36,23 @@
     transform: rotateY(180deg);
 }
 
-.front-face,
 .back-face {
     width: 100%;
     height: 100%;
     padding: 20px;
     position: absolute;
     border-radius: 5px;
-    background: #9980FA;
-;
+    background: rgba(255, 255, 255, 0.7);
     backface-visibility: hidden;
 }
 
 .front-face {
     transform: rotateY(180deg);
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: #afff14;
+    backface-visibility: hidden;
 }
